# NeuroSim-Dev

./: pyproject.toml  readme.md  setup.cfg
data/: A_control_true.csv  A_patient_true.csv
data/ground_truth/: A_ad_4.csv  A_aud_1.csv  A_aud_4.csv  A_control_1.csv  A_control_2.csv  A_control_3.csv  A_control_4.csv  A_control_5.csv  A_control_template.csv  A_epilepsy_2.csv
data/roi_timeseries/: ad_1.csv  ad_2.csv  ad_3.csv  ad_4.csv  ad_5.csv  aud_1.csv  aud_2.csv  aud_3.csv  aud_4.csv  aud_5.csv  control_1.csv  control_2.csv  control_3.csv  control_4.csv  control_5.csv  epilepsy_1.csv  epilepsy_2.csv  epilepsy_3.csv  epilepsy_4.csv  epilepsy_5.csv  patient_1.csv  patient_2.csv  patient_3.csv
neuromod/: __init__.py  connectome_loader.py
neurosim/: __init__.py
neurosim/connectivity/: __init__.py  granger.py
neurosim/control/: __init__.py  energy.py  gramian_schur.py  metrics.py
neurosim/harmonization/: __init__.py  combat.py
neurosim/nct/: __init__.py  compute_NCT.py
notebooks/: 02_granger_vs_fc.ipynb  umap_nct_features.py
outputs/: ec_recovery_validation.csv  findings.txt
outputs/EC/: ad_1_EC.csv  ad_2_EC.csv  ad_3_EC.csv  ad_4_EC.csv  ad_5_EC.csv  aud_1_EC.csv  aud_2_EC.csv  aud_3_EC.csv  aud_4_EC.csv  aud_5_EC.csv  control_1_EC.csv  control_2_EC.csv  control_3_EC.csv  control_4_EC.csv  control_5_EC.csv  epilepsy_1_EC.csv  patient_1_EC.csv  (+6 more)
src/: compute_EC.py  compute_NCT.py  compute_zscores.py  generate_synthetic.py  run_pipeline.py  validate_ec_recovery.py  visualize.py
tests/: test_granger.py  test_harmonization.py  test_nct.py  test_neuromod.py
(+43 files in other folders)
