[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosim-dev"
version = "0.1.0"
description = "Network Control Theory for Neuroscience - GSoC 2026 Application"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NeuroSim Team", email = "neurosim@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "umap-learn>=0.5.0",
    "nilearn>=0.9.0",
]

[project.urls]
Repository = "https://github.com/Rishikakaps/NeuroSim-Dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurosim*", "neuromod*"]
